--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h2 style="text-decoration: underline;margin-bottom: 5px;text-align: center;margin-top: 2px;">SOUTH MALABAR
                 ORGANIC
                 FERTILIZERS</h2>
-            <h3 class="headings">VAIKKATHUR, VALANCHERI</h3>
+            <h3 class="headings">VAIKKATHUR, VALANCHERY</h3>
             <h3 class="headings">MALAPPURAM (DT),PIN:676552</h3>
             <h3 class="headings">PH : 04942643301</h3>
             <h4 class="headings" style="margin-bottom: 0.5rem;">southmalabar@gmail.com</h4>
@@ -82,7 +82,7 @@
 
         <div style="display: flex;width: 89.9%;border-left: 1px solid;border-right: 1px solid;" class="secondSec">
             <div style="width: 60%;border: 1px solid black;padding: 5px 2px;padding-left: 10px;border-left: none;">
-                <p>Your Gstin Number: 32A9VPK2604JIZT</p>
+                <p>Your Gstin Number: 32APVPK2604JIZT</p>
                 <p>Tax Is Payable On Reverse Charge: (Yes/No) -</p>
                 <p>Your Invoice Serial Number: <b>B2C/965</b></p>
                 <p>Your Invoice Date: 08-02-24</p>
@@ -100,12 +100,12 @@
                 <h4 style="border-bottom: 1px solid black;padding: 5px 2px;padding-left: 10px;margin: 5px 0;">Details of Receiver
                     (Billed to)</h4>
                 <div style="padding: 5px 2px;padding-left: 10px;">
-                    <p>Name: Amrita School Of Agriculture Sciences</p>
+                    <p>Name: Amrita School Of Agricultural Sciences</p>
                     <p>Address: Arasampalayam, Coimbatore</p>
                     <br>
                     <p>State:</p>
                     <p>State Code:</p>
-                    <p>Mobile No.730654</p>
+                    <p>Mobile No.7306542407</p>
                     <p>GSTIN Number</p>
                 </div>
 
@@ -186,8 +186,8 @@
             <div style="width: 60%;border: 1px solid;border-top: none;">
                 <p style="border-bottom: 1px solid;padding: 6px 0;padding-left: 5px;">Invoice Value (In Words)</p>
                 <div style="border-bottom: 1px solid;"></div>
-                <p style="border-bottom: 1px solid;padding: 6px 0;padding-left: 5px;">( Rupees Twelve Thousand And
-                    Twenty Four Only )</p>
+                <p style="border-bottom: 1px solid;padding: 6px 0;padding-left: 5px;">( Rupees Sixteen Thousand Seven Hundred And Twenty Two Only
+                    )</p>
                 <p style="padding: 3px 0;padding-left: 5px;padding-bottom: 15px;">Certified that the Particulars given above are true and
                     correct</p>
             </div>
@@ -202,7 +202,7 @@
                     <p>0.00</p>
                     <p>0.00</p>
                     <p>0.00</p>
-                    <p style="margin-top: 15px;font-weight: 600;">12024.00</p>
+                    <p style="margin-top: 15px;font-weight: 600;">16722.00</p>
 
                 </div>
 
@@ -225,9 +225,9 @@
         <div style="width: 89.9%;border: 1px solid;border-top: none;" class="secondSec">
             <h4 style="text-decoration: underline;margin: 0;padding-bottom: 5px;padding-top: 5px;padding-left: 10px;">BANK DETAILS</h4>
             <div style="width: 100%;display: flex;padding-left: 10px;">
-                <p>CANERA BANK VALANCHERI</p>
-                <p>A/C NO: 0859261005078</p>
-                <p>IFSC : CNRB0000859</p>
+                <p>CANARA BANK VALANCHERY</p>
+                <p style="margin-left: 8rem;">A/C NO: 0859261005078</p>
+                <p style="margin-left: 8rem;">IFSC : CNRB0000859</p>
             </div>
         </div>
     </section >
